--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "hyperf/cache": "~3.0.0",
         "hyperf/command": "~3.0.0",
         "hyperf/config": "~3.0.0",
+        "hyperf/database": "~3.0.0",
         "hyperf/db-connection": "~3.0.0",
         "hyperf/framework": "~3.0.0",
         "hyperf/guzzle": "~3.0.0",
@@ -23,8 +24,10 @@
         "hyperf/logger": "~3.0.0",
         "hyperf/memory": "~3.0.0",
         "hyperf/process": "~3.0.0",
-        "hyperf/database": "~3.0.0",
-        "hyperf/redis": "~3.0.0"
+        "hyperf/redis": "~3.0.0",
+        "hyperf/socketio-server": "^3.0",
+        "hyperf/view": "^3.0",
+        "hyperf/view-engine": "^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
