--- a/docker/hyperf/Dockerfile
+++ b/docker/hyperf/Dockerfile
@@ -15,8 +15,8 @@ LABEL maintainer="Hyperf Developers <group@hyperf.io>" version="1.0" license="MI
 ARG timezone
 
 ENV TIMEZONE=${timezone:-"Asia/Shanghai"} \
-    APP_ENV=prod \
-    SCAN_CACHEABLE=(true)
+    APP_ENV=dev \
+    SCAN_CACHEABLE=(false)
 
 # update
 RUN set -ex \
@@ -47,8 +47,9 @@ WORKDIR /opt/www
 # RUN composer install --no-dev --no-scripts
 
 COPY . /opt/www
-RUN composer install --no-dev -o && php bin/hyperf.php
+#RUN composer install --no-dev -o && php bin/hyperf.php
 
 EXPOSE 9501
+EXPOSE 9502
 
 ENTRYPOINT ["php", "/opt/www/bin/hyperf.php", "start"]
