--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=skeleton
 APP_ENV=dev
 
 DB_DRIVER=mysql
-DB_HOST=localhost
-DB_PORT=3309
+DB_HOST=hyperf-mysql
+DB_PORT=3306
 DB_DATABASE=echarts_stock
 DB_USERNAME=hyperf
 DB_PASSWORD=123456
@@ -11,7 +11,7 @@ DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
 
-REDIS_HOST=localhost
+REDIS_HOST=hyperf-redis
 REDIS_AUTH=(null)
-REDIS_PORT=6900
+REDIS_PORT=6379
 REDIS_DB=0
