--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "hyperf/memory": "~3.0.0",
         "hyperf/process": "~3.0.0",
         "hyperf/redis": "~3.0.0",
+        "hyperf/session": "^3.0",
         "hyperf/socketio-server": "^3.0",
         "hyperf/view": "^3.0",
         "hyperf/view-engine": "^3.0"
@@ -33,6 +34,7 @@
         "friendsofphp/php-cs-fixer": "^3.0",
         "hyperf/devtool": "~3.0.0",
         "hyperf/testing": "~3.0.0",
+        "hyperf/watcher": "^3.0",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^1.0",
         "swoole/ide-helper": "^5.0"
