--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "hyperf/devtool": "~3.0.0",
+        "hyperf/devtool": "^3.0",
         "hyperf/testing": "~3.0.0",
         "hyperf/watcher": "^3.0",
         "mockery/mockery": "^1.0",
