--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ DB_CHARSET=utf8mb4
 DB_COLLATION=utf8mb4_unicode_ci
 DB_PREFIX=
 
-REDIS_HOST=hyperf-redis
+# REDIS_HOST=hyperf-redis
+REDIS_HOST=172.20.0.2
 REDIS_AUTH=(null)
 REDIS_PORT=6379
 REDIS_DB=0
