--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
         - "3309:3306"
         volumes:
         - ./docker/mysql/data:/var/lib/mysql
+        - ./docker/mysql/backup:/root/backup
         privileged: true
 
 #使用方法: docker-compose -f docker-compose.yml up -d
