--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,12 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=8.0",
+        "hyperf/async-queue": "^3.0",
         "hyperf/cache": "~3.0.0",
+        "hyperf/collection": "^3.0",
         "hyperf/command": "~3.0.0",
         "hyperf/config": "~3.0.0",
+        "hyperf/crontab": "^3.0",
         "hyperf/database": "~3.0.0",
         "hyperf/db-connection": "~3.0.0",
         "hyperf/framework": "~3.0.0",
